2007-11-12  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-msg.el (gnus-confirm-mail-reply-to-news): Adjust :version.

2007-11-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnmail.el (nnmail-parse-active): Make group names unibyte.
	(nnmail-save-active): Use a unibyte buffer when saving active file,
	which may contain non-ASCII group names.

	* nnml.el (nnml-request-group): Decode group names in messages.

2007-11-05  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-citation-line-function)
	(message-insert-formatted-citation-line): Fix spelling of
	`message-insert-formated-citation-line'.

2007-11-03  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-sum.el (gnus-summary-highlight): Mark as risky local variable.

2007-11-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnml.el (nnml-request-rename-group): Bind file-name-coding-system to
	nnmail-pathname-coding-system.

	* gnus-group.el (gnus-group-rename-group): Encode non-ASCII group name
	that a user enters; decode group names in messages.

	* gnus-msg.el (gnus-inews-do-gcc): Encode non-ASCII group names.

2007-11-01  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-util.el (mm-charset-eval-alist): Mark as risky local variable.

	* gnus.el (gnus-group-charter-alist): Mark as risky local variable.

	* gnus-art.el (gnus-button-alist, gnus-header-button-alist): Mark as
	risky local variable.

	* gnus-group.el (gnus-group-icon-list): Mark as risky local variable.

2007-11-01  Teodor Zlatanov  <tzz@lifelogs.com>

	* encrypt.el: Improve documentation to fix function name typo.
	Reported by Daiki Ueno <ueno@unixuser.org>.

2007-11-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-next-page): Honor gnus-article-over-scroll
	even if the point is not in the last page of an article.
	(gnus-article-prev-page): Honor gnus-article-over-scroll when moving
	back to the previous page.

2007-10-30  Reiner Steib  <Reiner.Steib@gmx.de>

	* qp.el (quoted-printable-decode-string): Fix typo in doc string.
